@@ -2,7 +2,7 @@
 //
 /****************************************************************************
    liblscp - LinuxSampler Control Protocol API
-   Copyright (C) 2004-2007, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2004-2008, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Lesser General Public
@@ -90,6 +90,9 @@ const char *lscp_event_to_text ( lscp_event_t event )
 	case LSCP_EVENT_MISCELLANEOUS:
 		pszText = "MISCELLANEOUS";
 		break;
+	case LSCP_EVENT_CHANNEL_MIDI:
+		pszText = "CHANNEL_MIDI";
+		break;
 	case LSCP_EVENT_NONE:
 	default:
 		break;
@@ -141,6 +144,8 @@ lscp_event_t lscp_event_from_text ( const char *pszText )
 			event = LSCP_EVENT_MIDI_INSTRUMENT_INFO;
 		else if (strcasecmp(pszText, "MISCELLANEOUS") == 0)
 			event = LSCP_EVENT_MISCELLANEOUS;
+		else if (strcasecmp(pszText, "CHANNEL_MIDI") == 0)
+			event = LSCP_EVENT_CHANNEL_MIDI;
 	}
 
 	return event;
